fixed scrollbars for lightbox

--- a/src/app/components/Home-Content/Lightbox/CardClicked.module.css
+++ b/src/app/components/Home-Content/Lightbox/CardClicked.module.css
@@ -17,9 +17,6 @@
   min-height: 422.13px;
   height: fit-content;
   max-height: 90vh;
-  overflow-y: auto; /* Show vertical scrollbar if the content exceeds max-height */
-  scrollbar-width: thin;
-  scrollbar-color: rgba(71, 81, 108, 0) rgba(0, 0, 0, 0);
   padding: 10px 18px 10px 18px;
   line-height: 1.5;
   font-size: 14px;
